--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,14 +14,14 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://bigota.d.miui.com/20.4.27/miui_MIMIX3_20.4.27_8f7879221b_10.0.zip
+  ROM_URL: https://bkt-sgp-miui-ota-update-alisgp.oss-ap-southeast-1.aliyuncs.com/V11.0.4.0.PCGCNXM/miui_HM6_V11.0.4.0.PCGCNXM_8ab510b0e5_9.0.zip
   ROM_NAME: MIUI
-  BUILD_TYPE: ab
+  BUILD_TYPE: Aonly
   TZ: Asia/Shanghai
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: self-hosted
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
@@ -57,11 +57,10 @@ jobs:
               mkdir final
               zip -r final/GSI.zip ./*
        
-       - name: Upload GSI to WeTransfer
+       - name: Upload GSI to BitSend
          run: |
-              cd $GITHUB_WORKSPACE/ErfanGSIs/output
               curl -sL https://git.io/file-transfer | sh
-              ./transfer wet ./final/GSI.zip
+              ./transfer gof ./final/GSI.zip
 
          
             
