--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -22,6 +22,15 @@ env:
 jobs:
   build:
     runs-on: self-hosted
+    steps:
+    - name: Set up Python
+      run: |
+        python -m pip install --upgrade pip
+        pip install python3
+
+jobs:
+  build:
+    runs-on: self-hosted
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
