--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -23,37 +23,36 @@ jobs:
   build:
     runs-on: self-hosted
     if: github.event.repository.owner.id == github.event.sender.id
+
     steps:
-    - name: Set up Python
-      run: |
-        python -m pip install --upgrade pip
-        pip install python3
-        
-    - name: Initialization environment
-      run: |
+       - name: Checkout
+         uses: actions/checkout@master
+           
+       - name: Initialization environment
+         run: |
             sudo -E apt-get -qq install git wget
        
-    - name: Clone ErfanGSI Source Code
-      run: git clone --recurse-submodules https://github.com/erfanoabdi/ErfanGSIs.git ErfanGSIs
+       - name: Clone ErfanGSI Source Code
+         run: git clone --recurse-submodules https://github.com/erfanoabdi/ErfanGSIs.git ErfanGSIs
          
-    - name: Fix exit
-      run: |
+       - name: Fix exit
+         run: |
               sed -i 's/\|\| exit 1//g' $GITHUB_WORKSPACE/ErfanGSIs/url2GSI.sh
               sed -i 's/exit 1//g' $GITHUB_WORKSPACE/ErfanGSIs/url2GSI.sh
        
-    - name: Setting up ErfanGSI requirements
-      run: |
+       - name: Setting up ErfanGSI requirements
+         run: |
               cd $GITHUB_WORKSPACE/ErfanGSIs
               mkdir ./output
               sudo bash ./setup.sh
        
-    - name: Download Stock Rom & Generate GSI
-      run: |
+       - name: Download Stock Rom & Generate GSI
+         run: |
               cd  $GITHUB_WORKSPACE/ErfanGSIs
               sudo bash ./url2GSI.sh -c --$BUILD_TYPE $ROM_URL $ROM_NAME
        
-    - name: Zip GSI  
-      run: |
+       - name: Zip GSI  
+         run: |
               cd $GITHUB_WORKSPACE/ErfanGSIs/output
               mkdir final
               zip -r final/GSI.zip ./*
